<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SignUpFragment"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textColor="#FF2A3842"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_common"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:textColor="#992A3842"
            android:hint="@string/email"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_common"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textColor="#992A3842"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_button_top"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_text_in_login"
            android:layout_marginBottom="@dimen/margin_text_bottom"/>
        <FrameLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            >
            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>