<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SignUpFragment"
        android:orientation="vertical">

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:textColor="#2A3842"
            android:layout_marginStart="@dimen/margin_add_idea_side"
            android:layout_marginEnd="@dimen/margin_add_idea_side"
            android:layout_marginTop="@dimen/margin_add_idea_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/impact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_add_idea_side"
            android:layout_marginEnd="@dimen/margin_add_idea_side"
            android:layout_marginTop="@dimen/margin_button_top"
            app:layout_constraintTop_toBottomOf="@+id/content">
        <TextView
            android:id="@+id/impact_text"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:text="@string/impact"
            android:textStyle="bold"
            android:textSize="@dimen/idea_type_size"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/impact_spinner"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin_line_height"
                android:alpha="0.2"
                android:layout_below="@+id/impact_text"
                android:background="#2A3842"
                android:layout_marginTop="@dimen/view_margin_line"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_add_idea_side"
            android:layout_marginEnd="@dimen/margin_add_idea_side"
            android:layout_marginTop="@dimen/margin_button_top"
            app:layout_constraintTop_toBottomOf="@+id/impact">
            <TextView
                android:id="@+id/ease_text"
                android:layout_width="match_parent"
                android:textColor="@color/textColor"
                android:text="@string/ease"
                android:textStyle="bold"
                android:textSize="@dimen/idea_type_size"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/ease_spinner"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin_line_height"
                android:alpha="0.2"
                android:layout_below="@+id/ease_text"
                android:background="#2A3842"
                android:layout_marginTop="@dimen/view_margin_line"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_add_idea_side"
            android:layout_marginEnd="@dimen/margin_add_idea_side"
            android:layout_marginTop="@dimen/margin_button_top"
            app:layout_constraintTop_toBottomOf="@+id/ease">
            <TextView
                android:id="@+id/confidence_text"
                android:layout_width="match_parent"
                android:textColor="@color/textColor"
                android:text="@string/confidence"
                android:textStyle="bold"
                android:textSize="@dimen/idea_type_size"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/confidence_spinner"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"

                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin_line_height"
                android:alpha="0.2"
                android:layout_below="@+id/confidence_text"
                android:background="#2A3842"
                android:layout_marginTop="@dimen/view_margin_line"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_add_idea_side"
            android:layout_marginEnd="@dimen/margin_add_idea_side"
            android:layout_marginTop="@dimen/margin_button_top"
            app:layout_constraintTop_toBottomOf="@+id/confidence">
            <TextView

                android:layout_width="match_parent"
                android:textColor="@color/textColor"
                android:text="@string/avg"
                android:textStyle="bold"
                android:textSize="@dimen/idea_type_size"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/avg_text"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin_line_height"
                android:alpha="0.2"
                android:layout_below="@+id/avg_text"
                android:background="#2A3842"
                android:layout_marginTop="@dimen/view_margin_line"
                />


        </RelativeLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avg"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_button_top_save"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_button_top_cancel"
            android:background="#CECECE"/>
        <FrameLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:clickable="true"
            android:elevation="5dp"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"

            >
            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>