<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        android:elevation="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="12dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="thsoahasfpsdofusd kdjfd fdgdpogjpdgjdfpg dsksfhds sdkfhsdin"
                app:layout_constraintBottom_toBottomOf="@+id/option"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/option"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_more_vert_white_24dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="9dp"
                android:alpha="0.3"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@+id/content" />
            
            <LinearLayout
                android:id="@+id/impact_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            android:orientation="vertical"
            android:layout_marginBottom="18dp"
          >

            <TextView
                android:id="@+id/imapact_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="10"
                android:textColor="@color/textColor"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/impact"
                android:textColor="@color/textColor"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/ease_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintLeft_toRightOf="@+id/impact_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:orientation="vertical"
                android:layout_marginBottom="18dp"
            >

                <TextView
                    android:id="@+id/ease_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="10"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/ease"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/confindence_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintLeft_toRightOf="@+id/ease_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:orientation="vertical"
                android:layout_marginBottom="18dp"
            >

                <TextView
                    android:id="@+id/confidence_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="10"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/textColor"
                    android:text="@string/confidence"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/avg_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view"
               app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="9dp"
                android:orientation="vertical"
                android:layout_marginBottom="18dp"
              >

                <TextView
                    android:id="@+id/avg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="10"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/avg"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
</layout>

